<resources>
	<string name="app_name">万集卡</string>
	<string name="action_settings">Settings</string>
	<string name="msg_encode_contents_failed">Could not encode a barcode from the data provided.</string>
	<string name="button_ok">确定</string>
	<string name="wjika_cancel">取消</string>
	<string name="wjika_prompt">提示</string>
	<string name="contents_contact">Contact info</string>
	<string name="contents_email">Email address</string>
	<string name="contents_location">Geographic coordinates</string>
	<string name="contents_phone">Phone number</string>
	<string name="contents_sms">SMS address</string>
	<string name="contents_text">Plain text</string>
	<string name="msg_camera_framework_bug">请在应用管理设置中允许万集卡访问你的相机。</string>
	<string name="msg_default_status">将二维码放入扫描框内，即可自行扫描</string>
	<string name="msg_default_format">Format</string>
	<string name="msg_default_type">Type</string>
	<string name="msg_default_time">Time</string>
	<string name="msg_default_meta">Metadata</string>
	<string name="guide_start_try">立即体验</string>
	<string name="launcher_card_login">登录领取</string>
	<string name="launcher_card_alert">您还可以免费领取%1$s张卡到您的卡包</string>
	<string name="login_input_signcode">验证码</string>
	<string name="login_input_phone">手机号</string>
	<string name="login_get_signcode">获取验证码</string>
	<string name="login_get_signcode_again">重新获取</string>
	<string name="login">登录</string>
	<string name="verify_new_phone">更换手机号</string>
	<string name="login_alert">为给您更安全以及更好的体验我，采用了动态密码登录，无需注册即可直接使用手机号登录。</string>
	<string name="launcher_card_choose">选择</string>
	<string name="launcher_card_chose">已选择</string>
	<string name="wjika_client_retry">重试</string>
	<string name="card_title">卡包</string>
	<string name="card_pay">付款</string>
	<string name="card_buy">购卡</string>
	<string name="pay_code_refresh">更新二维码</string>
	<string name="buy_search_hint">店铺名称</string>
	<string name="buy_food">美食</string>
	<string name="buy_amuse">生活</string>
	<string name="buy_make_face">丽人</string>
	<string name="buy_make_hear">美发</string>
	<string name="buy_nearby_shop">推荐商家</string>
	<string name="search_store_list_title">商家列表</string>
	<string name="details_phone">电话：</string>
	<string name="details_address">地址：</string>
	<string name="details_businesstime">营业时间：</string>
	<string name="search_clean_history">清空搜索历史</string>
	<string name="wjika_client_search">搜索</string>
	<string name="store_details_title">商家详情</string>
	<string name="buy_more">更多</string>
	<string name="card_details_price_label">特价：</string>
	<string name="mycard_details_price_label">余额：</string>
	<string name="card_details_saled_label">已售：%1$s</string>
	<string name="card_privilege_title">用户特权</string>
	<string name="privilege_count">拥有%1$s个特权</string>
	<string name="store_privilege_title">服务· 特权</string>
	<string name="store_privilege_count">%1$s个商家服务</string>
	<string name="card_details_use_explian">使用说明</string>
	<string name="support_store_title">此卡券适用的门店</string>
	<string name="branch_store_title">相关店铺</string>
	<string name="store_showcase_title">商品橱窗</string>
	<string name="check_more_store">查看更多店铺</string>
	<string name="support_store_count">共有%1$s家店面可用</string>
	<string name="card_privilege_count">享有%1$s项会员卡特权</string>
	<string name="buy_city_title">城市信息</string>
	<string name="login_input_phone_hint">请输入您的手机号</string>
	<string name="login_input_signcode_hint">请输入验证码</string>
	<string name="buy_cation">活动专区</string>
	<string name="pay_code_title">付款</string>
	<string name="store_details_desc_title">店铺详情</string>
	<string name="privilege_current_title">现有特权</string>
	<string name="privilege_more_title">更多特权</string>
	<string name="privilege_store_service_title">商家服务</string>
	<string name="check_more_card">查看更多商品</string>
	<string name="pay_title">支付信息</string>
	<string name="pay_price_label">本次消费金额</string>
	<string name="scan_title">扫一扫</string>
	<string name="qr_title">付款码</string>
	<string name="wjika_client_colse">关闭</string>
	<string name="pay_get_money_store">收款方：%1$s</string>
	<string name="pay_price_alert">需要从卡中扣除%1$s元</string>
	<string name="pay_click_label">立即支付</string>
	<string name="card_old_user_alert">亲，你已经领取过会员卡了，不能再领啦！不妨召集你的好友过来领卡吧！</string>
	<string name="card_alert_invite">马上邀请</string>
	<string name="card_current_buy">立即购买</string>
	<string name="card_current_charge">立即充值</string>
	<string name="card_charge_sucess">充值成功</string>
	<string name="card_charge_to_card">去卡包看看</string>
	<string name="card_charge_to_first">回首页</string>
	<string name="wjika_client_money_label">金额</string>
	<string name="wjika_client_count_label">数量</string>
	<string name="wjika_client_coupon">优惠</string>
	<string name="wjika_client_selling_price">售价</string>
	<string name="wjika_client_selling_price2">售价￥%1$s</string>
	<string name="pay_card_amount_label">当前余额：</string>
	<string name="pay_input_pwd_title">输入支付密码</string>
	<string name="pay_input_six_password">请输入6位支付密码</string>
	<string name="pay_input_pwd_forget">忘记密码？</string>
	<string name="store_address">地址：%1$s</string>
	<string name="no_available_net">无可用网络</string>
	<string name="update">立即升级</string>
	<string name="ignore">取消</string>
	<string name="update_title">检测到新版更新</string>
	<string name="update_started">开始下载更新，请稍候</string>
	<string name="check_update">检查更新</string>
	<string name="city_current_label">定位城市</string>
	<string name="city_available_label">热门城市</string>
	<string name="pay_buy_card_result_title">购卡成功</string>
	<string name="pay_buy_card_result_channel">付款方式</string>
	<string name="pay_buy_card_result_date">购卡时间</string>
	<string name="pay_buy_card_result_amount">支付金额</string>
	<string name="search_result_alert">没有找到合适的商户</string>
	<string name="person_confirm">确定</string>
	<string name="person_give_up">放弃</string>
	<string name="person_continue">继续</string>
	<string name="person_think_again">再想想</string>
	<string name="person_not_now">暂不</string>
	<string name="person_auth_now">马上实名</string>
	<string name="person_submit">提交</string>
	<string name="person_fix">修改</string>
	<string name="person_privilege">特权</string>
	<string name="person_location">定位</string>
	<string name="person_oldphone">原手机号</string>
	<string name="person_logout">退出登录</string>
	<string name="person_login_now">立即登录</string>
	<string name="person_my_order">我的订单</string>
	<string name="person_consumption_history">我的消费</string>
	<string name="person_card_recharge">卡包充值</string>
	<string name="person_pay_pwd_setting">安全设置</string>
	<string name="person_invite_friend">邀请好友</string>
	<string name="person_setting">设置</string>
	<string name="person_setting_location_info">要开启或关闭位置信息，您可以在设置 >隐私 >定位服务 >万集卡 中手动设置</string>
	<string name="person_info_null">数据还未加载完成，请稍后重试</string>
	<string name="person_info_title">个人信息</string>
	<string name="person_info_avatar">头像</string>
	<string name="person_info_sex">性别</string>
	<string name="person_info_birthday_text">生日</string>
	<string name="person_info_location">所在地</string>
	<string name="person_info_auth">实名认证</string>
	<string name="person_info_sex_hint">请选择性别</string>
	<string name="person_info_sex_man">男</string>
	<string name="person_info_sex_woman">女</string>
	<string name="person_info_birthday">%1$s年%2$s月</string>
	<string name="person_auth_toast">请填写正确的姓名和身份证号码</string>
	<string name="person_auth_toast_unautherized">实名认证未通过，请填写真实信息</string>
	<string name="person_auth_info">为保障您的账户资产安全，请完善实名信息</string>
	<string name="person_auth_nochange">实名认证提交后则不支持修改，请填写真实有效信息</string>
	<string name="person_auth_choose_bank">选择银行卡</string>
	<string name="person_auth_choose_bank_info">请选择您的银行卡</string>
	<string name="person_auth_toast_authenticated">恭喜您，实名认证已通过</string>
	<string name="person_auth_toast_verifying">认证中</string>
	<string name="person_auth_giveup_to_auth">您要放弃实名认证？</string>
	<string name="person_auth_buy_baozi">为保证你的账户财产安全，使用包子需要实名认证，是否现在进行实名认证</string>
	<string name="person_auth_auth_right_now">立即实名</string>
	<string name="person_auth_bank_support">支持的银行卡</string>
	<string name="person_auth_unautherized">未认证</string>
	<string name="person_auth_verifying">审核中</string>
	<string name="person_auth_authenticated">已认证</string>
	<string name="person_auth_hint">核对真实身份，保证合法权益</string>
	<string name="person_auth_real_name">真实姓名</string>
	<string name="person_auth_real_name_hint">请输入您的真实姓名</string>
	<string name="person_auth_id_no">身份证号</string>
	<string name="person_auth_phone">手机号码</string>
	<string name="person_auth_bank_number">银行卡号</string>
	<string name="person_auth_register_time">注册时间</string>
	<string name="person_auth_bank_phone">预留手机号</string>
	<string name="person_auth_id_no_hint">请输入您的身份证号码</string>
	<string name="person_auth_submit">提交审核</string>
	<string name="person_auth_desc">根据国家监管部门最新规定，我们需要您配合完成实名认证。完成认证后您的资金将由平安银行担保，以保障您的账户资金安全。此信息只用于实名认证使用我们将严格保密请放心填写</string>
	<string name="person_auth_dialog_info">为保证您的账户安全\n请尽快完成实名认证！</string>
	<string name="person_auth_find_info">填写验证信息完成身份验证</string>
	<string name="person_auth_find_prompt">以上内容仅作为银行信息对比，万集卡将严格保密</string>
	<string name="person_auth_input_bank_phone">请输入银行卡绑定手机号</string>
	<string name="person_auth_input_bank_number">请输入您的银行卡号</string>
	<string name="person_auth_id_title">验证身份信息</string>
	<string name="person_auth_id_hint">请输入正确的身份认证信息</string>
	<string name="person_auth_id_next">下一步</string>
	<string name="person_auth_id_desc">请填写您的身份信息用于找回密码</string>
	<string name="person_auth_sms_info">我们已经已经发送验证码到您的手机%1$s</string>
	<string name="person_auth_money_info">我们已经向您尾号%1$s的银行卡打款，请输入收到的金额</string>
	<string name="person_auth_get_money">收款金额</string>
	<string name="person_auth_input_sms">请输入短信验证码</string>
	<string name="person_auth_input_money">请输入收到的金额</string>
	<string name="person_auth_money_prompt_info">24小时内收不到验证金额或需要更换银行卡请直接点击左上角“返回”按钮重新提交</string>
	<string name="person_info_avatar_camera">拍照</string>
	<string name="person_info_avatar_photo">相册</string>
	<string name="person_info_avatar_toast">头像上传成功</string>
	<string name="person_info_nickname_title">修改真实姓名</string>
	<string name="person_info_city_title">选择城市</string>
	<string name="person_info_city_current">当前选择城市：%1$s</string>
	<string name="person_phone_illegal">手机号异常</string>
	<string name="person_order_all">全部</string>
	<string name="person_order_wait">待支付</string>
	<string name="person_order_closed">已关闭</string>
	<string name="person_order_paying">支付中</string>
	<string name="person_order_refund">已退款</string>
	<string name="person_order_pay_success">支付成功</string>
	<string name="person_order_pay_cancel">取消支付</string>
	<string name="person_order_pay_failed">支付失败</string>
	<string name="person_giveup_pay">确定要放弃支付吗？</string>
	<string name="person_order_alipay">支付宝</string>
	<string name="person_order_yeepay">易宝</string>
	<string name="person_order_bankpay">银行卡</string>
	<string name="person_order_buy_num">数量%1$s</string>
	<string name="person_order_pay">立即支付</string>
	<string name="person_order_detail_title">订单详情</string>
	<string name="person_setting_help">帮助</string>
	<string name="person_about_us_agreement">万集卡协议</string>
	<string name="person_about_us_copyright">© 2014–2016 万集融合信息技术（北京）有限公司 版权所有\n京公网安备11010802016306</string>
	<string name="person_about_us_contact">联系客服</string>
	<string name="complain_message_select_register_time">选择注册时间</string>
	<string name="person_coupon_explain_first">说明一</string>
	<string name="person_coupon_explain_second">说明二</string>
	<string name="person_coupon_explain_third">说明三</string>
	<string name="person_coupon_explain_forth">说明四</string>
	<string name="person_coupon_explain_fifth">说明五</string>
	<string name="person_coupon_explain_first_content">通用券可购买万集卡平台全部商品</string>
	<string name="person_coupon_explain_second_content">优惠券暂时不支持叠加使用</string>
	<string name="person_coupon_explain_third_content">当优惠金额大于应付金额时，差额将不予退回</string>
	<string name="person_coupon_explain_forth_content">如果一小时内（限购活动订单为三分钟）没有完成支付，订单将自动关闭，订单中使用的优惠券会在订单关闭后返还到您的账户</string>
	<string name="person_coupon_explain_fifth_content">手动取消订单时，订单中的优惠券也将一并返还到您的账户</string>
	<string name="login_change_phone">更换手机号</string>
</resources>