<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1px"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingBottom="15dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingTop="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/person_coupon_explain_first"
            android:textColor="@color/wjika_client_dark_grey"
            android:textSize="15sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/person_coupon_explain_first_content"
            android:textColor="@color/wjika_client_introduce_words"
            android:textSize="15sp" />
    </LinearLayout>

    <View style="@style/person_split_left_right" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1px"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingBottom="15dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingTop="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/person_coupon_explain_second"
            android:textColor="@color/wjika_client_dark_grey"
            android:textSize="15sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/person_coupon_explain_second_content"
            android:textColor="@color/wjika_client_introduce_words"
            android:textSize="15sp" />
    </LinearLayout>

    <View style="@style/person_split_left_right" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1px"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingBottom="15dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingTop="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/person_coupon_explain_third"
            android:textColor="@color/wjika_client_dark_grey"
            android:textSize="15sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/person_coupon_explain_third_content"
            android:textColor="@color/wjika_client_introduce_words"
            android:textSize="15sp" />
    </LinearLayout>

    <View style="@style/person_split_left_right" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1px"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingBottom="15dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingTop="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/person_coupon_explain_forth"
            android:textColor="@color/wjika_client_dark_grey"
            android:textSize="15sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/person_coupon_explain_forth_content"
            android:textColor="@color/wjika_client_introduce_words"
            android:textSize="15sp" />
    </LinearLayout>

    <View style="@style/person_split_left_right" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1px"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingBottom="15dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingTop="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/person_coupon_explain_fifth"
            android:textColor="@color/wjika_client_dark_grey"
            android:textSize="15sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/person_coupon_explain_fifth_content"
            android:textColor="@color/wjika_client_introduce_words"
            android:textSize="15sp" />
    </LinearLayout>

    <View style="@style/person_split_left_right" />
</LinearLayout>