<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/person_complain"
              xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/wjika_client_common_bg"
              android:orientation="vertical">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@color/white"
		android:orientation="vertical">

		<LinearLayout
			android:id="@+id/person_complain_msg_name"
			android:layout_width="match_parent"
			android:layout_height="48dp"
			android:background="@color/white"
			android:gravity="center_vertical"
			android:paddingLeft="12dp"
			android:paddingRight="12dp">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/person_auth_real_name"
				android:textColor="@color/wjika_client_dark_grey"
				android:textSize="15sp"/>

			<com.wjika.client.widget.ClearEditText
				android:id="@+id/person_complain_msg_real_name"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="@dimen/def_padding"
				android:layout_weight="1"
				android:background="@null"
				android:drawableRight="@drawable/search_result_img"
				android:hint="@string/person_auth_real_name_hint"
				android:textColor="@color/wjika_client_dark_grey"
				android:textColorHint="@color/wjika_client_hint_words"
				android:textSize="@dimen/font_size_c"/>
		</LinearLayout>

		<View
			style="@style/person_split_left_right"/>

		<LinearLayout
			android:id="@+id/person_complain_msg_card"
			android:layout_width="match_parent"
			android:layout_height="48dp"
			android:background="@color/white"
			android:gravity="center_vertical"
			android:paddingLeft="12dp"
			android:paddingRight="12dp">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/person_auth_id_no"
				android:textColor="@color/wjika_client_dark_grey"
				android:textSize="15sp"/>

			<com.wjika.client.widget.ClearEditText
				android:id="@+id/person_complain_msg_id_number"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="@dimen/def_padding"
				android:layout_weight="1"
				android:background="@null"
				android:drawableRight="@drawable/search_result_img"
				android:hint="@string/person_auth_id_no_hint"
				android:textColor="@color/wjika_client_dark_grey"
				android:textColorHint="@color/wjika_client_hint_words"
				android:textSize="@dimen/font_size_c"
				/>
		</LinearLayout>

		<View
			style="@style/person_split_left_right"/>

		<LinearLayout
			android:id="@+id/person_complain_msg_num"
			android:layout_width="match_parent"
			android:layout_height="48dp"
			android:layout_marginTop="1px"
			android:background="@color/white"
			android:gravity="center_vertical"
			android:paddingLeft="12dp"
			android:paddingRight="12dp">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/person_auth_phone"
				android:textColor="@color/wjika_client_dark_grey"
				android:textSize="15sp"/>

			<TextView
				android:id="@+id/person_complain_msg_phone_num"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="@dimen/def_padding"
				android:layout_weight="1"
				android:background="@null"
				android:enabled="false"
				android:textColor="@color/wjika_client_hint_words"
				android:textSize="14sp"/>
		</LinearLayout>
	</LinearLayout>

	<View
		style="@style/person_split_left_right"/>

	<LinearLayout
		android:id="@+id/person_complain_msg_time"
		android:layout_width="match_parent"
		android:layout_height="48dp"
		android:background="@color/white"
		android:gravity="center_vertical"
		android:orientation="horizontal"
		android:paddingLeft="12dp"
		android:paddingRight="12dp">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/person_auth_register_time"
			android:textColor="@color/wjika_client_dark_grey"
			android:textSize="15sp"/>

		<TextView
			android:id="@+id/person_complain_register_time"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="@dimen/def_padding"
			android:layout_weight="1"
			android:drawableRight="@drawable/person_jump_icon"
			android:text="@string/complain_message_select_register_time"
			android:textColor="@color/wjika_client_hint_words"
			android:textSize="14sp"/>
	</LinearLayout>

	<View
		style="@style/person_split_match"/>

	<TextView
		android:id="@+id/person_complain_msg_next"
		android:layout_width="match_parent"
		android:layout_height="48dp"
		android:layout_marginLeft="12dp"
		android:layout_marginRight="12dp"
		android:layout_marginTop="30dp"
		android:background="@drawable/ic_button"
		android:enabled="false"
		android:gravity="center"
		android:text="@string/person_auth_id_next"
		android:textColor="@color/white"/>
</LinearLayout>
