<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/wjika_client_common_bg"
              android:orientation="vertical">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="45dp"
		android:background="@color/white"
		android:gravity="center_vertical">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingLeft="@dimen/wjika_client_comment_marginleft"
			android:paddingRight="@dimen/wjika_client_comment_marginleft"
			android:text="@string/login_input_phone"
			android:textColor="@color/wjika_client_dark_grey"
			android:textSize="@dimen/font_size_c"/>

		<com.wjika.client.widget.ClearEditText
			android:id="@+id/input_phone"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="@null"
			android:hint="@string/login_input_phone_hint"
			android:inputType="number"
			android:maxLength="11"
			android:paddingRight="@dimen/wjika_client_comment_marginright"
			android:singleLine="true"
			android:textColor="@color/wjika_client_dark_grey"
			android:textColorHint="@color/wjika_client_hint_words"
			android:textSize="@dimen/font_size_c"/>
	</LinearLayout>

	<View style="@style/person_split_match"/>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="45dp"
		android:background="@color/white"
		android:gravity="center_vertical">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingLeft="@dimen/wjika_client_comment_marginleft"
			android:paddingRight="@dimen/wjika_client_comment_marginleft"
			android:text="@string/login_input_signcode"
			android:textColor="@color/wjika_client_dark_grey"
			android:textSize="@dimen/font_size_c"/>

		<com.wjika.client.widget.ClearEditText
			android:id="@+id/input_signcode"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:background="@null"
			android:hint="@string/login_input_signcode_hint"
			android:inputType="number"
			android:maxLength="4"
			android:paddingRight="@dimen/wjika_client_comment_marginright"
			android:textColor="@color/wjika_client_dark_grey"
			android:textColorHint="@color/wjika_client_hint_words"
			android:textSize="@dimen/font_size_c"/>

		<TextView
			android:id="@+id/btn_get_signcode"
			android:layout_width="103dp"
			android:layout_height="wrap_content"
			android:layout_marginRight="@dimen/wjika_client_comment_marginright"
			android:background="@drawable/ic_tran_bg_selector"
			android:gravity="center"
			android:text="@string/login_get_signcode"
			android:textColor="@color/get_signcode_txt_color"/>
	</LinearLayout>

	<View style="@style/person_split_match"/>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="45dp"
		android:background="@color/white"
		android:gravity="center_vertical">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingLeft="@dimen/wjika_client_comment_marginleft"
			android:paddingRight="@dimen/wjika_client_comment_marginleft"
			android:text="邀请码"
			android:textColor="@color/wjika_client_dark_grey"
			android:textSize="@dimen/font_size_c"/>

		<com.wjika.client.widget.ClearEditText
			android:id="@+id/input_invite_code"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="@null"
			android:hint="请输入邀请码(非必填)"
			android:maxLength="11"
			android:paddingRight="@dimen/wjika_client_comment_marginright"
			android:singleLine="true"
			android:textColor="@color/wjika_client_dark_grey"
			android:textColorHint="@color/wjika_client_hint_words"
			android:textSize="@dimen/font_size_c"/>
	</LinearLayout>

	<View style="@style/person_split_match"/>

	<TextView
		android:id="@+id/btn_login"
		android:layout_width="match_parent"
		android:layout_height="48dp"
		android:layout_marginLeft="15dp"
		android:layout_marginRight="15dp"
		android:layout_marginTop="30dp"
		android:background="@drawable/ic_button"
		android:enabled="false"
		android:gravity="center"
		android:text="@string/login"
		android:textColor="@color/white"/>
</LinearLayout>